# vulnhunter

./: pyproject.toml  readme.md  readme_ch.md
src/vulnhunter/: vulnhunter.py  vulnhunter_mcp.py
