[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vulnhunter"
version = "0.1.0"
authors = [
  { name="ltfall", email="ltfall@qq.com" },
]
description = "IDA Pro plugin named vulnhunter"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [ 
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "mcp"
]

[project.urls]
Homepage = "https://github.com/ALateFall/vulnhunter"
"Bug Tracker" = "https://github.com/ALateFall/vulnhunter/issues"

[project.scripts]
vulnhunter = "vulnhunter.vulnhunter_mcp:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]